<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SuccessfulRequestQuotationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnShare"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_success"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/successful_request_icon_content_description"
                    android:src="@drawable/ic_green_check" />

                <TextView
                    android:id="@+id/tv_success_quotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/coolvetica_rg"
                    android:text="@string/successful_request_title"
                    android:textColor="@color/farmacia_gaby_gray"
                    android:textSize="22sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/coolvetica_rg"
                android:text="@string/successful_request_transaction_label"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_transaction_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/coolvetica_rg"
                android:textColor="@color/farmacia_gaby_gray"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/tv_transaction"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:text="2vxkQJSAhwf5t1DXZzVJ" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/coolvetica_rg"
                android:text="@string/successful_request_date_label"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_transaction" />

            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/coolvetica_rg"
                android:textColor="@color/farmacia_gaby_gray"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/tv_transaction_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_transaction_number"
                tools:text="10/05/2022" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/coolvetica_rg"
                android:text="@string/successful_request_time_label"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <TextView
                android:id="@+id/tv_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/coolvetica_rg"
                android:textColor="@color/farmacia_gaby_gray"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/tv_date_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_value"
                tools:text="16:28" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            style="@style/LeftJointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/farmacia_gaby_green"
            android:text="@string/button_share"
            android:textAppearance="@style/BigButtonTextAppearance"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnFinalize"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinalize"
            style="@style/RightJointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_finalize"
            android:textAppearance="@style/BigButtonTextAppearance"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnShare" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>